[project]
name = "ol-openedx-otel-monitoring"
version = "0.1.1"
description = "OTel Monitoring"
authors = [
    {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "Django>2.0",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-django",
    "opentelemetry-exporter-richconsole",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_otel_monitoring = "ol_openedx_otel_monitoring.apps:OTelMonitoringConfig"

[project.entry-points."cms.djangoapp"]
ol_openedx_otel_monitoring = "ol_openedx_otel_monitoring.apps:OTelMonitoringConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_otel_monitoring"]
include = [
    "ol_openedx_otel_monitoring/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "ol_openedx_otel_monitoring/**/*",
    "README.rst",
    "pyproject.toml",
]
