[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-openedx-rapid-response-reports"
version = "0.3.0"
description = "An Open edX plugin to add rapid response reports support"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = ["Python", "edx", "rapid-response", "reports"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_rapid_response_reports = "ol_openedx_rapid_response_reports.app:RapidResponsePluginConfig"

# cms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "ol_openedx_rapid_response_reports/**.py",
    "ol_openedx_course_structure_api/templates/**",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
