[project]
name = "ol-openedx-rapid-response-reports"
version = "0.5.1"
description = "An Open edX plugin to add rapid response reports support"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.0",
  "djangorestframework>=3.14.0",
  "edx-django-utils>4.0.0",
  "edx-drf-extensions>=10.0.0",
  "edx-opaque-keys",
  "rapid-response-xblock>=0.11.0",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_rapid_response_reports = "ol_openedx_rapid_response_reports.app:RapidResponsePluginConfig"

[tool.uv.sources]
rapid-response-xblock = { workspace = true }

[tool.pytest.ini_options]
addopts = ["--no-migrations", "--reuse-db"]
filterwarnings = [
  "default",
  "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
  "ignore:.*pkg_resources.*:DeprecationWarning",
  "ignore:.*Python 3.13.*:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_rapid_response_reports"]
include = [
  "ol_openedx_rapid_response_reports/**/*.py",
  "ol_openedx_rapid_response_reports/templates/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_rapid_response_reports/**/*",
  "README.rst",
  "pyproject.toml",
]
