[project]
name = "ol-openedx-sentry"
version = "0.2.1"
description = "An Open edX plugin to enable error tracking with Sentry"
authors = [
    {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
requires-python = ">=3.8"
dependencies = [
    "Django>2.0",
    "sentry-sdk>=2.0.0",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_sentry = "ol_openedx_sentry.app:EdxSentry"

[project.entry-points."cms.djangoapp"]
ol_openedx_sentry = "ol_openedx_sentry.app:EdxSentry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_sentry"]
include = [
    "ol_openedx_sentry/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "ol_openedx_sentry/**/*",
    "README.rst",
    "pyproject.toml",
]
