[project]
name = "ol-openedx-sentry"
version = "0.4.0"
description = "An Open edX plugin to enable error tracking with Sentry"
readme = "README.rst"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.2",
  "sentry-sdk>=2.55.0",
]

[project.entry-points."lms.djangoapp"]
ol_openedx_sentry = "ol_openedx_sentry.app:EdxSentry"

[project.entry-points."cms.djangoapp"]
ol_openedx_sentry = "ol_openedx_sentry.app:EdxSentry"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ol_openedx_sentry.settings.test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_sentry"]
include = [
  "ol_openedx_sentry/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_sentry/**/*",
  "README.rst",
  "pyproject.toml",
]
