[project]
name = "ol-openedx-uai-content-customization"
version = "0.1.1"
description = "An Open edX plugin to generate industry/length-specific UAI custom courses from video CSV data."
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.0",
  "edx-django-utils>4.0.0",
  "edx-opaque-keys",
]

[project.entry-points."cms.djangoapp"]
ol_openedx_uai_content_customization = "ol_openedx_uai_content_customization.apps:OLOpenEdxUaiContentCustomizationConfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_openedx_uai_content_customization"]
include = [
  "ol_openedx_uai_content_customization/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_openedx_uai_content_customization/**/*",
  "README.rst",
  "pyproject.toml",
]
