[project]
name = "ol-social-auth"
version = "0.1.1"
description = "An Open edX plugin implementing MIT social auth backend"
authors = [
  {name = "MIT Office of Digital Learning"}
]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["Python", "edx"]
dependencies = [
  "Django>2.0",
  "social-auth-core>=4.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ol_social_auth"]
include = [
  "ol_social_auth/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "ol_social_auth/**/*",
  "README.rst",
  "pyproject.toml",
]
