[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openedx-companion-auth"
version = "1.1.0"
description = "A package to add login redirection from Open edX to MIT applications"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
  { name = "MIT Office of Digital Learning" },
]
keywords = ["Python", "edx", "authentication", "redirection"]
classifiers = [
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]

[project.entry-points."lms.djangoapp"]
openedx_companion_auth = "openedx_companion_auth.apps:MITxCoreConfig"

# cms.djangoapp entry point was empty in BUILD

[tool.hatch.build]
include = [
    "openedx_companion_auth/**.py",
]
# Ensure package data is included
[tool.hatch.build.targets.wheel]
packages = ["."]
